# MCP-Chatbot

./: .gitignore  README.md  client.py  email_server.py  main.py  pyproject.toml  rag_server.py  requirements.txt  server_config.json  supabase_tools_server.py  tools_server.py
data/neuralflow_docs/: vector_db.pkl
neuralflow_docs/: Aboutt.txt  Services.txt  Testimonials.txt
